# makepad-site-frontend

./: Cargo.toml  README.md
resources/: test2.json
resources/page_data/: config.json  page_about.json  page_home.json  page_products.json  test.json
src/: app.rs  lib.rs  main.rs  state.rs  ui.rs
